Fixed user Item on small screen

--- a/styles/UserItem.module.css
+++ b/styles/UserItem.module.css
@@ -23,3 +23,17 @@
 
   flex-grow: 1;
 }
+
+@media (max-width: 700px) {
+  .info {
+    flex-direction: column;
+    height: 300px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .data {
+    justify-content: space-between;
+    width: 90%;
+  }
+}
